<resources>
    <string name="app_name">Video Downloader</string>
    <string name="adMode">1</string>
    <string name="title_home">Home</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_whatsapp">Whatsapp</string>
    <string name="whatsapp_download">Whatsapp Status Downloader</string>
    <string name="no_status">No status is available. Watch any status update and come back here!</string>
    <string name="StatusParsing">Parsing Statuses</string>
    <string name="enter_url">Search or Type URL</string>
    <string name="msg_share">Download this awesome all video downloader app!</string>
    <string name="app_link">https://play.google.com/store</string>
    <string name="no_history">No History</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="open_url">Open Url</string>
    <string name="copy_url">Copy Url</string>
    <string name="copy_msg">URL Copied</string>
    <string name="video">Videos</string>
    <string name="share">Share</string>
    <string name="shareus">Share Us</string>
    <string name="moreapp">More App</string>
    <string name="share_msg">Check this awesome free video downloader. You can download video from 100+ websites.</string>
    <string name="go_to_folder">Location</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="speed_0">Speed: 0KB/s</string>
    <string name="remaining_undefine">Remaining: —</string>
    <string name="empty_download_list">Do you want to clear this list?</string>
    <string name="settings">Settings</string>
    <string name="vibrate">Vibrate on Download Complete</string>
    <string name="sound">Sound on Download Complete</string>
    <string name="browser">Browser</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="help">Help</string>
    <string name="rate">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://en.wikipedia.org/wiki/Privacy_policy</string>
    <string-array name="blocked_sites">
        <item>youtube.com</item>
    </string-array>
    <string name="title_activity_ytdownload">YTDownloadActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="APP_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title1">STATUS</string>
    <string name="title2">SAVER</string>
    <string name="titleWhatsapp">Whatsapp</string>
    <string name="titleWB">Business Whatsapp</string>
    <string name="txtImage">Photos</string>
    <string name="txtVideos">Videos</string>
    <string name="txtNoData">No Data Found</string>
    <string name="allow_whatsapp_access">Allow Whatsapp Access</string>
    <string name="allow_app_to_access_whatsapp_status_folder">Allow App to Access Get All Status</string>
    <string name="txtWrongfolder">You have selected wrong folder. Please select .Statuses folder to view Whatsapp Status.</string>
    <string name="previewWp">WhatsApp</string>
    <string name="previewDownload">Download</string>
    <string name="previewShare">Share</string>
    <string name="Share_With">Share with</string>
    <string name="Created_By_">Created By :</string>
    <string name="Msg_WhatsApp_Not_Installed">WhatsApp have not been installed</string>
    <string name="titleDownload">DOWNLOAD</string>
    <string name="titleSetting">SETTNGS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ironsource_app_id" translatable="false">202196530</string>
    <string name="GOOGLE_PLAY_App_Liscencekey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAn3gBZ90XWD9rfPvoy3qY2OMzCfEVORoRYsD229mDoRUITZQ0kjnBV1EpqUr20xpY/nnQRIBELJK3HQUQ84zCjB44J0IogYo+jWsM6+LYMjtPU1dnTCDwp8VefLrjQ4L3Ri1O9gYiMrZVAh4EZRdbovEdXEkoLc9i0GEZJxfpME8uH6GAPCt/vxUzH///F71usbfnJK4iGUA73WTJlNgYXR9GZzU7qy1e6O58ZOJF8qqrvaeev1VCVJzd2zbJX7GjdEJ5AsQB0qqW/Jr11verR0xNx/fXzatYhilrAPVSdb7CXuNyRSXGyb21PalErj3qZWklsvmib+UxsDNhRio6OQIDAQAB
</string>
    <string name="productidcode" translatable="false">noadsid</string>
    <string name="onsignalappid" translatable="false">e385f9b8-7af3-4e6e-9bfa-9b8f373de881</string>
    <string name="privacy_policy_url" translatable="false">https://policies.google.com/privacy</string>
    <string name="AdmobAppId" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="MoPubBanner" translatable="false">b195f8dd8ded45fe847ad89ed1d016da</string>
    <string name="MoPubInterstitial" translatable="false">24534e1901884e398f1253216226017e</string>
    <string name="MoPubRewardID" translatable="false">920b6145fb1546cf8b5cf2ac34638bb7</string>
    <string name="MoPubNativeID" translatable="false">11a17b188668469fb0412708c3d16813</string>
    <string name="sintony" translatable="false">sintony-regular.otf</string>
    <string name="developer_email" translatable="false">infusiblecoder@gmail.com</string>
    <string name="closwetheapprestart">Error getting purchase info kindly close and restart the app</string>
    <string name="gallery_name">Gallery</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="str_developed_with_love">Developed with ❤ in <b>Pakistan</b></string>
    <string name="info_permission_denied">Sorry permission denied. We can not open this app on your device, please try again later.</string>
    <string name="format_request_permision">%1$s will need to have read/write permission your sdcard to save Files.Do you want to grant it?</string>
    <string name="SharingVideoSubject">Sharing Downloaded Video</string>
    <string name="SharingVideoTitle">Sharing Video</string>
    <string name="SharingVideoBody">Sharing Video File</string>
    <string name="privacy_message">hello</string>
    <string name="RateAppTitle">Like this app?</string>
    <string name="RateApp">Share the love by rating 5 stars in Play Store. 😘</string>
    <string name="how_to_download_videos">How to download videos?</string>
    <string name="share_the_video_to_aio_video_downloader_app_or">• Share the video to All Video Downloader app (or)</string>
    <string name="simply_copy_the_link_of_any_video">• Simply copy the link of any video</string>
    <string name="make_sure_auto_download_service_is_running">• Make sure \'Auto Download Service\' is running</string>
    <string name="paste_video_url_here">Paste Video URL here…</string>
    <string name="options">Options</string>
    <string name="no_watermark">No Watermark</string>
    <string name="remove_watermark_from_downloaded_video">Remove watermark from downloaded video</string>
    <string name="auto_download">Auto Download</string>
    <string name="simply_copy_the_link_of_video_to_start_download">Simply copy the link of video to start download</string>
    <string name="currently_supports">Currently Supports</string>
    <string name="tiktok">TikTok</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="twitter">Twitter</string>
    <string name="viemo">" We collect the minimum amount of information about you that is commensurate with providing you with a satisfactory service. This policy indicates the type of processes that may result in data being collected about you. Your use of this website gives us the right to collect that information. "</string>
    <string name="message_title">Message Title</string>
    <string name="message_content">Message Content</string>
    <string name="auto_download_not_working">Auto Download not working?</string>
    <string name="make_sure_app_is_running_in_background">• Make sure app is running in the background</string>
    <string name="restart_the_app_if_that_doesn_t_work">• Restart the app if that doesn\'t work</string>
    <string name="contact_developer_before_leaving_a_negative_review">• Contact developer before leaving a negative review</string>
    <string name="author">Author</string>
    <string name="music_author">Music - Author</string>
    <string name="description_goes_here">Description Goes Here</string>
    <string name="starting_download">Starting download…</string>
    <string name="watch">WATCH</string>
    <string name="download_fragment">Download</string>
    <string name="gallery_fragment">Gallery</string>
    <string name="grant_option">Grant</string>
    <string name="permission_title">Permission Required!</string>
    <string name="cancel_option">Cancel</string>
    <string name="rate_dialog">RATE</string>
    <string name="later_btn">LATER</string>
    <string name="auto_download_title_notification">Auto Download Service</string>
    <string name="auto_download_title_notification_start">Copy the link of video to start download</string>
    <string name="stop_btn">Stop</string>
    <string name="restarted_service">Service restarted</string>
    <string name="downloading_des">Downloading</string>
    <string name="url_not_suppotr">This url not supported or no media found!</string>
    <string name="we_cant_allow">We cannot allow to download videos form this website.</string>
    <string name="genarating_download_link">Generating download link</string>
    <string name="somthing">Something went wrong!</string>
    <string name="delete_confirm">Selected video will be permanently deleted. This action cannot be undone. </string>
    <string name="don_start">Downloading Start!</string>
    <string name="somth_video_wrong">\"Something went wrong while playing video! Please try again \"</string>
    <string name="went_shARRE">\"Something went wrong while sharing video! Please try again \"</string>
    <string name="error_occ">Error occurred!</string>
    <string name="install_fb">Install facebook app</string>
    <string name="install_tik">Install Tiktok app</string>
    <string name="install_ins">Install Instagaram app</string>
    <string name="enter_valid">Please Enter a valid URI</string>
    <string name="aio_auto">All Auto Download</string>
    <string name="StatusSaver">Status Saver</string>
    <string name="video_downloader_gallery">Video Downloader Gallery</string>
    <string name="status_saver_gallery">Status Saver Gallery</string>
    <string name="appnotinstalled">WhatsApp Is Not Installed Kindly Install It</string>
    <string name="privacy">PRIVACY POLICY</string>
    <string name="language">Language</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="privacytxt">Privacy</string>
    <string name="noApp_f">No application found to open this file.</string>
    <string name="file_del">File was Deleted</string>
    <string name="are_sure_del">Are you sure you want to delete this file?</string>
    <string name="del_tit">DELETE?</string>
    <string name="nn">No</string>
    <string name="yyy">Yes</string>
    <string name="vidd">\" video?\"</string>
    <string name="selected_i">\" Selected\"</string>
    <string name="choose">Choose</string>
    <string name="watch_arr">Watch</string>
    <string name="del_arr">Delete</string>
    <string name="share_arr">Share</string>
    <string name="saved_to">\"Saved to: \"</string>
    <string name="refre">Refreshed!</string>
    <string name="pernecessory">Permission necessary</string>
</resources>