<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.np.whatsappsaver.Activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_screen" />

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_above="@+id/lBottom"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_main" />

    <LinearLayout
        android:id="@+id/lBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frameBanner"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/myTextviewBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/title1"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            style="@style/myTextviewBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/title2"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <LinearLayout
            android:id="@+id/lWhatsapp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/bg_round_white">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/iv_whatsapp" />

            <TextView
                style="@style/myTextviewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="@string/titleWhatsapp"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lWhatsBus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/bg_round_white">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/iv_wbu" />

            <TextView
                style="@style/myTextviewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="@string/titleWB"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ytChannel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/bg_round_white"
            android:gravity="center">


            <TextView
                style="@style/myTextviewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Visit our YouTube Channel"
                android:textColor="#F44336"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>