<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhatsappDownloader.Activity.WhatsappActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_screen" />

    <RelativeLayout
        android:id="@+id/reltool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_settings"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivCreation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="3dp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_toLeftOf="@+id/ivSetting"
            android:src="@drawable/ic_downloads" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/reltool"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginLeft="-20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_wp_shadow" />

        <TextView
            android:id="@+id/txtToolName"
            style="@style/myTextviewBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:text="@string/titleWhatsapp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_half_round">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:tabGravity="fill"
                    app:tabTextColor="@color/colorPrimary"
                    app:tabMode="fixed" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:visibility="gone"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/lPhotos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtPhotos"
                            style="@style/myTextviewMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txtImage"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/_4sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/view_green" />

                    <LinearLayout
                        android:id="@+id/lVideos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtVideos"
                            style="@style/myTextviewMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txtVideos"
                            android:textColor="@color/unseltxt"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <View
                            android:id="@+id/vBotomPhoto"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_3sdp"
                            android:background="@drawable/bg_round_green" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <View
                            android:id="@+id/vBotomVideo"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_3sdp"
                            android:background="@drawable/bg_round_white" />
                    </LinearLayout>
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvData"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                    <TextView
                        android:id="@+id/txtNoData"
                        style="@style/myTextviewMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/txtNoData"
                        android:textColor="@color/unseltxt"
                        android:textSize="@dimen/_11sdp"
                        android:visibility="gone" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>