<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.np.whatsappsaver.Activity.WhatsappActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_screen" />

    <RelativeLayout
        android:id="@+id/reltool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/reltool"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="@dimen/_130sdp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="-20dp"
            android:src="@drawable/ic_download_shadow"
            android:layout_height="@dimen/_120sdp"/>

        <TextView
            android:id="@+id/txtToolName"
            android:text="@string/titleDownload"
            android:textSize="30sp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            style="@style/myTextviewBold"
            android:layout_marginBottom="@dimen/_25sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg_half_round"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_above="@+id/frameBanner"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:weightSum="2"
                    android:layout_height="@dimen/_45sdp">
                    <LinearLayout
                        android:id="@+id/lPhotos"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtPhotos"
                            android:layout_width="wrap_content"
                            style="@style/myTextviewMedium"
                            android:text="@string/txtImage"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textSize="@dimen/_15sdp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/_4sdp"
                        android:background="@drawable/view_green"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_40sdp"/>

                    <LinearLayout
                        android:id="@+id/lVideos"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtVideos"
                            android:layout_width="wrap_content"
                            style="@style/myTextviewMedium"
                            android:text="@string/txtVideos"
                            android:textColor="@color/unseltxt"
                            android:gravity="center"
                            android:textSize="@dimen/_14sdp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_height="@dimen/_4sdp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <View
                            android:id="@+id/vBotomPhoto"
                            android:layout_width="@dimen/_30sdp"
                            android:background="@drawable/bg_round_green"
                            android:layout_height="@dimen/_3sdp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <View
                            android:id="@+id/vBotomVideo"
                            android:layout_width="@dimen/_30sdp"
                            android:background="@drawable/bg_round_white"
                            android:layout_height="@dimen/_3sdp"/>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvData"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/txtNoData"
                        style="@style/myTextviewMedium"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/txtNoData"
                        android:textColor="@color/unseltxt"
                        android:textSize="@dimen/_11sdp" />
                </RelativeLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameBanner"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>